# prompt-sanatizer

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
inputs/: example.txt
outputs/: sanitized.txt
src/: main.rs  sanitizer.rs
