[package]
name = "prompt-sanatizer"
version = "0.1.0"
edition = "2024"
description = "A prototype for sanitizing LLM prompts against injection vulnerabilities"
authors = ["Martijn Gijsberti Hodenpijl <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/mgijsberti/prompt-sanitizer"
readme = "README.md"

[[bin]]
name = "prompt-sanatizer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"